--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -268,177 +268,256 @@
 								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
 								<!--filters-->
 								<div class="p-filters p-filters-js">
-									<div class="p-filters__list">
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<div class="p-filters-select">
+									<div class="p-filters-list">
+										<div class="p-filters-item p-filters-item-js">
+											<div class="p-filters-inner">
+												<div class="p-filters-select p-filters-select-js">
 													<div class="p-filters-select-head">
 														<div class="p-filters__title">Производитель</div>
 														<div class="p-filters__placeholder">Выбрать производителя</div>
 														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
-													<div class="p-filters-select-drop">
-														<ul class="p-filters-select-list">
-															<li>
-																<label class="check-label">
-				<input type="checkbox" name="checkbox-normal" />
-				<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-			</label>
-															</li>
-															<li>
-																<label class="check-label">
-				<input type="checkbox" name="checkbox-checked" checked />
-				<span><i>&nbsp;</i>@@list[text]</span>
-			</label>
-															</li>
-															<li>
-																<label class="check-label">
-				<input type="checkbox" name="checkbox-disabled" disabled />
-				<span><i>&nbsp;</i>Disabled</span>
-			</label>
-															</li>
-															<li>
-																<label class="check-label">
-				<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-				<span><i>&nbsp;</i>Checked & Disabled</span>
-			</label>
-															</li>
-														</ul>
+												</div>
+												<div class="p-filters-drop p-filters-drop-js">
+													<ul class="p-filters-drop-list p-filters-group-js" data-reset-group="manufacturer">
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="ru" />
+					<span><i>&nbsp;</i>Россия</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="ch" />
+					<span><i>&nbsp;</i>Китай</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="fr" />
+					<span><i>&nbsp;</i>Франция</span>
+				</label>
+														</li>
+													</ul>
+													<div class="p-filters-drop-footer">
+														<button class="btn-reset btn-reset-js" data-reset-group="manufacturer" disabled><span>Очистить фильтр</span></button>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<div class="p-filters-select p-filters-group-js">
+										<div class="p-filters-item p-filters-item-js">
+											<div class="p-filters-inner">
+												<div class="p-filters-select p-filters-select-js">
 													<div class="p-filters-select-head">
-														<div class="p-filters__title">Стоимотсь</div>
-														<div class="p-filters__placeholder">Выбрать стоимотсь</div>
+														<div class="p-filters__title">Стоимость</div>
+														<div class="p-filters__placeholder">Выбрать стоимость</div>
 														<div class="p-filters__value">80 р. — 150 р.</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
-													<div class="p-filters-select-menu">
-														<ul class="p-filters-select-menu__list">
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-normal" />
-									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked" checked />
-									<span><i>&nbsp;</i>Checked</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-disabled" disabled />
-									<span><i>&nbsp;</i>Disabled</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-									<span><i>&nbsp;</i>Checked & Disabled</span>
-								</label>
-															</li>
-														</ul>
+												</div>
+												<div class="p-filters-drop p-filters-drop-js">
+													<ul class="p-filters-drop-list p-filters-group-js" data-reset-group="price">
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="-81" />
+					<span><i>&nbsp;</i>до 81 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="81-150" />
+					<span><i>&nbsp;</i>81 р. — 150 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="151-300" />
+					<span><i>&nbsp;</i>151 р. — 300 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="301-600" />
+					<span><i>&nbsp;</i>301 р. — 600 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="601-1000" />
+					<span><i>&nbsp;</i>601 р. — 1000 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="1001-2000" />
+					<span><i>&nbsp;</i>1001 р. — 2000 р.</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="2001-5000" />
+					<span><i>&nbsp;</i>2001 р. — 5000 р.</span>
+				</label>
+														</li>
+													</ul>
+													<div class="p-filters-drop-footer">
+														<button class="btn-reset btn-reset-js" data-reset-group="price" disabled><span>Очистить фильтр</span></button>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<div class="p-filters-select">
+										<div class="p-filters-item p-filters-item-js">
+											<div class="p-filters-inner">
+												<div class="p-filters-select p-filters-select-js">
 													<div class="p-filters-select-head">
-														<div class="p-filters__title">Производитель</div>
-														<div class="p-filters__placeholder">Выбрать производителя</div>
-														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
+														<div class="p-filters__title">Цвет</div>
+														<div class="p-filters__placeholder">Выбрать цвет</div>
+														<div class="p-filters__value">красны, черный, белый, зеленый, синий, серый, желный</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
-													<div class="p-filters-select-menu">
-														<ul class="p-filters-select-menu__list">
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-normal" />
-									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked" checked />
-									<span><i>&nbsp;</i>Checked</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-disabled" disabled />
-									<span><i>&nbsp;</i>Disabled</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-									<span><i>&nbsp;</i>Checked & Disabled</span>
-								</label>
-															</li>
-														</ul>
+												</div>
+												<div class="p-filters-drop p-filters-drop-js">
+													<ul class="p-filters-drop-list p-filters-group-js" data-reset-group="color">
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="red" />
+					<span><i>&nbsp;</i>Красны</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="black" />
+					<span><i>&nbsp;</i>Черный</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="white" />
+					<span><i>&nbsp;</i>Белый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="green" />
+					<span><i>&nbsp;</i>Зеленый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="blue" />
+					<span><i>&nbsp;</i>Синий</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="gray" />
+					<span><i>&nbsp;</i>Серый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="yellow" />
+					<span><i>&nbsp;</i>Желный</span>
+				</label>
+														</li>
+													</ul>
+													<div class="p-filters-drop-footer">
+														<button class="btn-reset btn-reset-js" data-reset-group="color" disabled><span>Очистить фильтр</span></button>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<div class="p-filters-select">
+										<div class="p-filters-item p-filters-item-js">
+											<div class="p-filters-inner">
+												<div class="p-filters-select p-filters-select-js">
 													<div class="p-filters-select-head">
 														<div class="p-filters__title">Тип</div>
 														<div class="p-filters__placeholder">Выбрать тип</div>
 														<div class="p-filters__value">патроны, светильники, лампочки, горелки, лампы дневного света, светодиоды</div>
 													</div>
 													<div class="p-filters-angle"><i>&nbsp;</i></div>
-													<div class="p-filters-select-menu">
-														<ul class="p-filters-select-menu__list">
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-normal" />
-									<span><i>&nbsp;</i>Отличный способ для выделения самого важного в тексте – использование контрастных шрифтов</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked" checked />
-									<span><i>&nbsp;</i>Checked</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-disabled" disabled />
-									<span><i>&nbsp;</i>Disabled</span>
-								</label>
-															</li>
-															<li>
-																<label class="check-label">
-									<input type="checkbox" name="checkbox-checked-disabled" checked disabled />
-									<span><i>&nbsp;</i>Checked & Disabled</span>
-								</label>
-															</li>
-														</ul>
+												</div>
+												<div class="p-filters-drop p-filters-drop-js">
+													<ul class="p-filters-drop-list p-filters-group-js" data-reset-group="type">
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="tall" />
+					<span><i>&nbsp;</i>Высокий</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="low" />
+					<span><i>&nbsp;</i>Низкий</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="lean" />
+					<span><i>&nbsp;</i>Худой</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="fat" />
+					<span><i>&nbsp;</i>Толстый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="skinny" />
+					<span><i>&nbsp;</i>Тощий</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="sad" />
+					<span><i>&nbsp;</i>Печальный</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="cheerful" />
+					<span><i>&nbsp;</i>Веселый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="kind" />
+					<span><i>&nbsp;</i>Добрый</span>
+				</label>
+														</li>
+														<li>
+															<label class="check-label">
+					<input type="checkbox" name="evil" />
+					<span><i>&nbsp;</i>Злой</span>
+				</label>
+														</li>
+													</ul>
+													<div class="p-filters-drop-footer">
+														<button class="btn-reset btn-reset-js" data-reset-group="type" disabled><span>Очистить фильтр</span></button>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="p-filters__item">
-											<div class="p-filters__inner">
-												<a href="#" class="btn-clear btn-clear-filters-js"> <i>
+										<div class="p-filters-item p-filters-item-js">
+											<div class="p-filters-inner">
+												<button class="btn-clear btn-clear-filters-js" disabled> <i>
 					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 543.9 599.9" enable-background="new 0 0 543.9 599.9">
 <path d="M291,0c2.6,2.4,5.4,4.8,7.9,7.4c30.7,31,61.5,62,92.2,93c6.5,6.6,6.5,11.2-0.1,17.8c-31.3,31.3-62.7,62.7-94,94  c-1.8,1.8-4,3.8-6.4,4.6c-6.4,2.1-11.8-2.3-11.9-9.4c-0.1-17-0.1-34-0.1-51c0-2,0-3.9,0-6.8c-9.8,0.5-19,0.6-28.2,1.5  c-29.7,3-57.6,11.7-82.5,28.6c-37,25-59.6,59.8-69,103.1c-9.6,44.2-6.7,87.5,13,128.6c23.8,49.9,64.1,79.3,117.6,90.5  c42.3,8.8,83.9,5.8,123.5-12.5c51.2-23.7,81.3-64.5,92.7-119.2c2.8-13.4,3.7-27.4,4.1-41.1c0.8-25.8,18.8-45.6,44.5-47.7  c22.9-1.9,44,15,48.7,39.1c0.1,0.6,0.6,1.1,0.9,1.7c0,6.3,0,12.7,0,19c-0.3,1.8-0.7,3.5-0.9,5.3c-2.2,13.9-3.3,28.1-6.8,41.7  C520,452.5,484,504.2,431.4,544.4c-34.9,26.7-73.9,44.3-117.4,51.7c-9,1.5-18,2.5-27.1,3.8c-10,0-20,0-30,0  c-1.1-0.3-2.2-0.7-3.3-0.8c-14.1-2.3-28.4-3.4-42.2-6.9c-67.7-17.3-121-55.9-161.5-112.4c-25-34.9-41-73.5-47.1-116.2  c-1-7.2-1.9-14.4-2.8-21.6c0-9,0-18,0-27c0.3-1.6,0.7-3.2,0.9-4.8c2.2-14.1,3.2-28.5,6.9-42.2c24.7-90.8,81.3-154.4,167.1-192  c32.7-14.3,67.3-20.3,103.7-19.7c0-1.9,0-3.6,0-5.4c0-12.5,0.2-25-0.1-37.5C278.4,7.5,279.8,3,285,0C287,0,289,0,291,0z"/>
 </svg>
 				</i>
-													<span>Сбросить все</span></a>
+					<span>Сбросить все</span>
+				</button>
 											</div>
 										</div>
+									</div>
+									<div class="p-filters-tags">
+										<div class="p-filters-tags__item"><i>Удалить</i><span>Россия</span></div>
+										<div class="p-filters-tags__item"><i>Удалить</i><span>301 р. — 600 р.</span></div>
+										<div class="p-filters-tags__item"><i>Удалить</i><span>Белый</span></div>
+										<div class="p-filters-tags__item"><i>Удалить</i><span>Печальный</span></div>
 									</div>
 								</div>
 								<!--filters end-->
