--- a/src/_tpl_products-options.xhtml
+++ b/src/_tpl_products-options.xhtml
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="p-options__item">
+		<div class="p-options__item view-switcher-wrap">
 			<div class="p-options__inner">
 				<!--view switcher-->
 				<div class="view-switcher view-switcher-js">
