--- a/src/_tpl_products-filters--head.xhtml
+++ b/src/_tpl_products-filters--head.xhtml
@@ -1,5 +1,5 @@
 <div class="p-filters-select-head">
 	<div class="p-filters__title">@@title</div>
-	<div class="p-filters__placeholder">@@placeholder</div>
-	<div class="p-filters__value">@@value</div>
+	<div class="p-filters__placeholder p-filters-placeholder-js">@@placeholder</div>
+	<div class="p-filters__value p-filters-selected-js" data-value-prefix="@@valuePrefix">@@value</div>
 </div>
